namespaces/asm-workshop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-workshop
  labels:
    name: asm-workshop
    istio.io/rev: asm-1120-4
