namespaces/asm-workshop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asm-workshop
spec:
  type: ClusterIP
  selector:
    app: asm-workshop
  ports:
  - name: http
    port: 80
    targetPort: 8080
