namespaces/asm-workshop/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: asm-workshop
spec:
  hosts:
    - asm-workshop.alwaysupalwayson.com
  gateways:
  - asm-ingress/asm-ingressgateway
  http:
  - route:
    - destination:
        host: asm-workshop
        port:
          number: 80
